--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,4 +46,4 @@ jobs:
         run: bun test
 
       - name: Publish package
-        run: bunx jsr publish
+        run: bunx jsr publish --allow-dirty
